--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        setup = [compileSdk: 25,
+                 buildTools: "24.0.2",
+                 minSdk    : 14,
+                 targetSdk : 25]
+
+        versions = [supportLib: "25+"]
+    }
     repositories {
         jcenter()
     }
